--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,6 @@
     </servlet>
   <servlet-mapping>
     <servlet-name>AxisServlet</servlet-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/services/*</url-pattern>
   </servlet-mapping>
 </web-app>
